--- a/css/index.css
+++ b/css/index.css
@@ -4,15 +4,15 @@
 /* purgecss end ignore */
 @tailwind utilities;
 
-@import url("https://rsms.me/inter/inter.css");
+@import url('https://rsms.me/inter/inter.css');
 
 html {
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 @supports (font-variation-settings: normal) {
   html {
-    font-family: "Inter var", sans-serif;
+    font-family: 'Inter var', sans-serif;
   }
 }
 
@@ -22,4 +22,9 @@ body {
 
 .container {
   @apply max-w-xl;
+}
+
+.bg {
+  background-image: url(/bg.png);
+  background-repeat: repeat;
 }
